# PREEMO

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_emscripten.bat
examples/: main.cpp
include/: Components.h  Preemo.h  PreemoComponentRegistry.h  PreemoComponents.h  PreemoEntity.h  PreemoRenderPipeline.h  PreemoRenderingManager.h  PreemoRenderingManagerAdapter.h  PreemoRenderingManagerDevice.h  PreemoRoot.h  PreemoScene.h  PreemoSceneManager.h  PreemoScriptableEntity.h
resources/: shader.wgsl
src/: Components.cpp  PreemoComponentRegistry.cpp  PreemoComponents.cpp  PreemoEntity.cpp  PreemoRenderPipeline.cpp  PreemoRenderingManager.cpp  PreemoRenderingManagerAdapter.cpp  PreemoRenderingManagerDevice.cpp  PreemoRenderingManagerInstance.cpp  PreemoRenderingManagerSurface.cpp  PreemoRoot.cpp  PreemoScene.cpp  PreemoSceneManager.cpp  PreemoScriptableEntity.cpp  preemo.idl
tests/cpp/: CMakeLists.txt  test_preemo.cpp  test_preemo_glfw.cpp
tests/js/: test.html
tests/js/package/src/: index.js
